Fix: 찐 최종_보안 파일 및 라이브러리 제외

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 .externalNativeBuild
 .cxx
 local.properties
+node_modules/
+server/node_modules/
+.env
+server/.env
+server/config/serviceAccountKey.json
+.DS_Store
