실시간 채팅 기능

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "socket.io": "^4.8.1"
   }
 }
