--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -24,8 +26,10 @@
             android:name="com.skt.tmap.sdk.API_KEY"
             android:value="QMIWUEYojt1y1hE2AgzXj3f1l0VH6IbI70yQTihL" />
 
+        <activity android:name=".MainActivity" />
+
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +37,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".FindAccountActivity" />
 
@@ -44,6 +48,11 @@
         <activity android:name=".RestaurantActivity" />
 
         <activity android:name=".ChatListActivity" />
+
+        <activity android:name=".ScheduleActivity" />
+
+        <activity android:name=".AddScheduleActivity" />
+
         <activity
             android:name=".ChatRoomActivity"
             android:windowSoftInputMode="adjustResize" />
@@ -52,6 +61,15 @@
             android:name=".LocationService"
             android:foregroundServiceType="location"
             android:exported="false" />
+
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+        android:name=".LocationService"
+        android:foregroundServiceType="location"
+        android:exported="false" />
 
     </application>
 </manifest>
