--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
 
         <activity android:name=".AddScheduleActivity" />
 
+        <activity android:name=".MyPageActivity" />
+
         <activity
             android:name=".ChatRoomActivity"
             android:windowSoftInputMode="adjustResize" />
