--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
 
         <activity android:name=".MyPageActivity" />
 
+        <activity android:name=".MeetingListActivity" />
+
         <activity
             android:name=".ChatRoomActivity"
             android:windowSoftInputMode="adjustResize" />
