--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,20 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask"> <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="http"
+                    android:host="moimi.app"
+                    android:pathPrefix="/invite" />
             </intent-filter>
         </activity>
 
@@ -49,6 +59,8 @@
         <activity android:name=".MyPageActivity" />
         <activity android:name=".MeetingListActivity" />
         <activity android:name=".SearchLocationActivity" />
+        <activity android:name=".ScheduleDetailActivity" />
+
         <service
             android:name=".LocationService"
             android:foregroundServiceType="location"
